--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<header class="bg-white w-full h-20 mt-0">
+    <div class="flex gap-20">
+        <div class="mt-10 ml-20">
+            <img src="../../assets/icon.png.webp" alt="">
+        </div>
+    <div class="flex justify-center mt-9 cols-5 gap-x-9">
+        <a href="" class="hover:text-blue-700">Home</a>
+        <a href="" class="hover:text-blue-700" >Shop</a>
+        <a href="" class="hover:text-blue-700">Blog</a>
+        <a href="" class="hover:text-blue-700">Pages</a>
+        <a href="" class="hover:text-blue-700">Contact</a>
+    </div>
+    <div>
+        <button>
+           Buy Now
+        </button>
+    </div>
+    </div>
+</header>
