--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button{
+
+@apply bg-transparent hover:border-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded
+}
+
+
+.red-button.button{
+    @apply border-red-500;
+}
